now works and renders correctly, added support for patbox's updated trinkets